# cloud_deepface

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/cloud_deepface/: DeepFace.py  setting.py
src/cloud_deepface.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cloud_deepface/basemodels/: ArcFace.py  DeepID.py  Dlib.py  Facenet.py  FbDeepFace.py  OpenFace.py  SFace.py  VGGFace.py
src/cloud_deepface/detectors/: DetectorWrapper.py  Dlib.py  FastMtCnn.py  MediaPipe.py  MtCnn.py  OpenCv.py  RetinaFace.py  Ssd.py  Yolo.py  YuNet.py
src/cloud_deepface/drivers/: Minio.py  config.py
src/cloud_deepface/extendedmodels/: Age.py  Emotion.py  Gender.py  Race.py
src/cloud_deepface/models/: Demography.py  FacialRecognition.py
src/cloud_deepface/modules/: demography.py  detection.py  modeling.py  preprocessing.py  recognition.py  representation.py  verification.py
src/it_deepface/: DeepFace.py
src/it_deepface.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/it_deepface/basemodels/: ArcFace.py  DeepID.py  Dlib.py  Facenet.py  FbDeepFace.py  OpenFace.py  SFace.py  VGGFace.py
src/it_deepface/commons/: folder_utils.py  package_utils.py
src/it_deepface/detectors/: DetectorWrapper.py  Dlib.py  FastMtCnn.py  MediaPipe.py  MtCnn.py  OpenCv.py  RetinaFace.py  Ssd.py  Yolo.py  YuNet.py
src/it_deepface/drivers/: DriverAbstract.py  Minio.py  config.py
src/it_deepface/extendedmodels/: Age.py  Emotion.py  Gender.py  Race.py
src/it_deepface/models/: Demography.py  FacialRecognition.py
tests/: test_cloud_deepface.py  test_it_deepface.py
(+6 files in other folders)
