[project]
name = "cloud_deepface"
version = "0.0.1"
authors = [
  { name="domtry", email="doffoufaye@gmail.com" },
]
description = "Package to permit ..."
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
  "minio==7.2.4",
  "mtcnn==0.1.1",
  "numpy==1.26.4",
  "opencv-python==4.9.0.80",
  "pandas==2.2.0",
  "tensorflow==2.15.0",
  "tqdm==4.66.2",
  "keras==2.15.0",
  "retina-face==0.0.14"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/pypa/sampleproject/issues"